istio-sso/k8s/07.keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: learning
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    # Service port defined for internal cluster access
    port: 8080
    # Reference to Keycloak container port 8080
    targetPort: 8080
