istio-sso/k8s/09.oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: learning
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: http
    # Service port defined for internal cluster access
    port: 4180
    # Reference to oauth2-proxy container port 4180
    targetPort: 4180
