istio-sso/k8s/3.ui-service.yaml
apiVersion: v1
# A Service provides a stable IP/DNS name for a group of dynamic Pods.
kind: Service
metadata:
  name: svc-ui
  namespace: learning
spec:
  # When traffic hits this Service it checks selector to which Pod to route the traffic
  selector:
    app: ui
  ports:
    - protocol: TCP
      # Container port named in deployment
      targetPort: ui-port
      # Service port for internal cluster access
      port: 80
  type: NodePort
