istio-sso/k8s/7.keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: learning
spec:
  selector:
    app: keycloak
  ports:
  - name: http
    # Service port for internal cluster access
    port: 8080
    # Port Keycloak is listening on in the container
    targetPort: 8080
