istio-sso/k8s/9.oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: learning
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: http
    # Service port for internal cluster access
    port: 4180
    # Port oauth2-proxy is listening on in the container
    targetPort: 4180
