istio-sso/k8s/10.istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: learning-gateway
  namespace: learning
spec:
  selector:
    istio: ingressgateway # standard for istioctl demo profile
  servers:
  - port:
      # Port 81 is defined for external access (avoiding conflict with standard HTTP 80)
      number: 81
      name: http
      protocol: HTTP
    hosts:
    - "*" # Istio Gateway requires "*" or FQDN (short names like "localhost" are rejected)
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: learning-vs
  namespace: learning
spec:
  hosts:
  - "*"
  gateways:
  - learning-gateway
  http:
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth2-proxy
        port:
          # Reference to service port 4180 defined in oauth2-proxy-service.yaml
          number: 4180
      headers:
        request:
          set:
            Host: "localhost:81"
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: keycloak
        port:
          # Reference to service port 8080 defined in keycloak-service.yaml
          number: 8080
      headers:
        request:
          set:
            Host: "localhost:81"
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: svc-api
        port:
          # Reference to service port 80 defined in api-service.yaml
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: svc-ui
        port:
          # Reference to service port 80 defined in ui-service.yaml
          number: 80
